# lab5

./: .gitignore  LICENSE  filesystem_search.py  iterative_deepening_lab.py  log_search.py  pyproject.toml
